Version 2.4.1 (not released)
	
	* default server: pickled.psychosis.net [ahn]
	* default to 10 updates per sec [ahn]
	
Version 2.4 released by Karthik Arumugham.

2.4:	* 36 player support [ahn]
	* Changes to compile under Linux [karthik]

Version 2.3 by Dave Pinkney, all others by Ted Hadley.

2.3:	
	* Fixed the observed-cloaker problem (they were invisible to
	  a locked on observer).
        * Added a new xtrekrc resource for the sorted player list:
	  teamOrder (you can list your team first or last).
        * Added full packet recording (except MOTD, MOTD_PIC, and
	  RSA_KEY), with a paradise compatibility option.  Record
          resources: recordGame, recordFile, maxRecord, recordIndiv,
	  confirmOverwrite
        * Added playback abilities for recorded games

# Order your team in the sorted player list (requires sortPlayers: on)
# Mostly useful for people with 1024x768 resolution
# 0 -- disabled, 1 -- list your team first, 2 -- list your team last
teamOrder:			0

# Record game by default?  (Can also use command line option)
recordGame:			off

# File to record to
recordFile:			noFileName.trk

# How many bytes to record?  0 for unlimited size
maxRecord:			0

# Record individual (personal) message?
recordIndiv:			off

# Require confirmation before recording over existing file?
confirmOverwrite:		on


2.2p3:
	* decreased weapon temp and engine temp bars to max out at
	  100%.  (suggested by John Salomon <john@csua.berkeley.edu>)

2.2p2:
	* buttonmap array extented (wbradley@sedona.intel.com)
	* self-selectable %p
	* window title (server name) got lost
	* metaserver - middle mouse button == observer
	* 500 macros allowed
	* fixed 24bit display problem
	* flag for using metacache as 
2.2p1:
	* metaserver "Chaos" for 'C'
	* Fixed galaxy ship problem (some client out there as incredibly
	  weird getship.c values for galaxy ship)

2.2:
	* limited .netrekrc created if no config file exists
	  (with reasonable geometry, new users only)
	* SHIP_CAP feature